src/objects/DTP_update__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>DTP__r.Purchase_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTP__c</fullName>
        <label>Direct To Pro Sales</label>
        <referenceTo>Direct_To_Pro_Sales__c</referenceTo>
        <relationshipLabel>DTP updates</relationshipLabel>
        <relationshipName>DTP_updates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DTP updates</relationshipLabel>
        <relationshipName>DTP_updates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <formula>New_Account__r.Owner.FirstName  &amp; &quot; &quot;  &amp;  New_Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_RPSM__c</fullName>
        <formula>TEXT(New_Account__r.Owner.RPSM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account__c</fullName>
        <formula>DTP__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <formula>DTP__r.Account_Name__r.Owner.FirstName  &amp; &quot; &quot; &amp;DTP__r.Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_RPSM__c</fullName>
        <formula>text(DTP__r.Account_Name__r.Owner.RPSM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old RPSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DTP update</label>
    <nameField>
        <displayFormat>DTP C- {000000000}</displayFormat>
        <label>DTP update number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTP updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>